# rda-python-template

./: MANIFEST.in  pyproject.toml
.github/workflows/: container-build.yaml  publish.yml
src/rda_python_template/: hello_world.py  hello_world.usg
tests/: test_example.py  test_hello_world.py
