[build-system]
requires = [
  "setuptools>=61.0",
  "rda_python_common",
]
build-backend = "setuptools.build_meta"

[project]
name = "rda_python_template"
version = "1.0.0"
authors = [
  { name="Zaihua Ji", email="zji@ucar.edu" },
]
description = "RDA Python code template to create new and modify existing other RDA python packages"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]

[project.urls]
"Homepage" = "https://github.com/NCAR/rda-python-template"

[project.scripts]
hello_world = "rda_python_template.hello_world:main"

